--- a/Makefile.am
+++ b/Makefile.am
@@ -47,6 +47,7 @@ myinstall:
 	cp src/build_index_rrbs bin
 	cp src/bmtools/bmtools bin
 	cp src/bmtools/bmDMR bin
+	cp src/bmtools/*py bin
 copy:
 	if [ -d "bin" ]; then echo bin exists; else mkdir bin; fi
 	g++ -o ./scripts/BatMeth2 ./scripts/BatMeth2.cpp -lpthread
@@ -92,3 +93,4 @@ copy:
 	cp src/build_index_rrbs bin
 	cp src/bmtools/bmtools bin
 	cp src/bmtools/bmDMR bin
+	cp src/bmtools/*py bin
